# scq

./: CMakeLists.txt  README.md  main.cpp
examples/: test_1.scq  test_2.scq  test_3.scq  test_4.scq  test_5.scq
scq/: scq.g4  scq.interp  scq.tokens  scqBaseListener.cpp  scqBaseListener.h  scqBaseVisitor.cpp  scqBaseVisitor.h  scqCompiler.cpp  scqCompiler.hpp  scqLexer.cpp  scqLexer.h  scqLexer.interp  scqLexer.tokens  scqListener.cpp  scqListener.h  scqParser.cpp  scqParser.h  scqVisitor.cpp  scqVisitor.h
scq/executor/: scqActionMap.hpp  scqExecutor.cpp  scqExecutor.hpp  scqFunctionMap.hpp
scq/executor/action/: scqAction.hpp  scqAssignAction.cpp  scqAssignAction.hpp  scqCallAction.cpp  scqCallAction.hpp  scqIfCallAction.cpp  scqIfCallAction.hpp
scq/executor/function/: scqComplementFunction.cpp  scqComplementFunction.hpp  scqDumpFunction.cpp  scqDumpFunction.hpp  scqFunction.hpp  scqIntersectFunction.cpp  scqIntersectFunction.hpp  scqRemoveFunction.cpp  scqRemoveFunction.hpp  scqResolveIdtfFunction.cpp  scqResolveIdtfFunction.hpp  scqSearchFunction.cpp  scqSearchFunction.hpp  scqSetSystemIdtfFunction.cpp  scqSetSystemIdtfFunction.hpp  scqUniteFunction.cpp  scqUniteFunction.hpp
scq/listener/: scqBaseListener.cpp  scqBaseListener.h  scqListener.cpp  scqListener.h
scq/visitor/: ObjectsStore.cpp  ObjectsStore.hpp  ProceduresStore.cpp  ProceduresStore.hpp  scqBaseVisitor.cpp  scqBaseVisitor.h  scqVisitor.cpp  scqVisitor.h
scripts/: make_all.sh
